# abmbci

./: .gitignore  CMakeLists.txt  README.md  environment.yml  pyproject.toml  setup.py
abmbci/: __init__.py  __main__.py  abm.py  mock_abm.py  testheadset.py  trigger.py  utils.py
cmake/: ABMConfig.cmake
include/: eeg_channel_info.hpp  logging.hpp
include/headset/: abmheadset.hpp  hwresult.hpp  packet.hpp  state.hpp
include/sdk/: callbacks.hpp  channel_info.hpp  device_info.hpp  eeg_channel_info.hpp  electrodes_info.hpp  headset_type.hpp  sdk.hpp
packet/: CMakeLists.txt
packet/include/: packet.hpp
packet/src/: module.cpp  packet.cpp
scripts/: build.ps1  build.sh
src/: abmbci.cpp  device_info.cpp  logging.cpp  main.cpp  main_general.cpp  packet.cpp  stub.cpp  test.cpp
src/headset/: abmheadset.cpp  packet.cpp
src/sdk/: callbacks.cpp  device_info.cpp  eeg_channel_info.cpp
toolchains/: mingw.cmake
